# gcp-experiments

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  Pipfile  README.md  README_Makefile.md  docker-compose.dev.yaml  docker-compose.prod.yaml  flake8  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
cloudbuild/: cloudbuild.yaml
notebooks/: manual_deploy.ipynb
tests/: test_main.py
